fjord-compiler/test/errors/MissingWhitespace.fj
module test.errors.MissingWhitespace

empty : Int
empty = 
